--- a/views/partials/bsnavbar.handlebars
+++ b/views/partials/bsnavbar.handlebars
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="pull-left" href="#"><img src="/img/MyLogoSm.png"></a>
+      <a class="pull-left" href="#"><img height="48" width="48" src="/img/MyLogoSm.png"></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
